--- a/WebFundamentals/CSS/Portfolio/style.css
+++ b/WebFundamentals/CSS/Portfolio/style.css
@@ -46,6 +46,9 @@
 #footer{
     padding: 5px;
     font-family: sans-serif;
+    width: 100%;
+    text-align: center;
+    display: inline-block;
 }
 .heading{
     font-family: sans-serif;
@@ -95,6 +98,9 @@
     border-radius: 10px;
     cursor: pointer;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+    width: auto;
+    margin: 0 auto;
+    display: block;
 }
 .socialmedia{
     height: 20px;
