--- a/Python/Week 2/2 - Tuesday/Counter/templates/index.html
+++ b/Python/Week 2/2 - Tuesday/Counter/templates/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Counter</title>
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='/css/style.css') }}">
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     </head>
     <body>
         <h1>Counter</h1>
