--- a/mean/week5/3_wednesday/registration/src/app/app.component.html
+++ b/mean/week5/3_wednesday/registration/src/app/app.component.html
@@ -172,8 +172,11 @@
       <div class="form-group">
         <label for="lucky" class="col-sm-2 control-label">*I'm feeling lucky:</label>
         <div class="col-sm-offset-1">
-          <input type="radio" name="lucky" value="true" [(ngModel)]="user.lucky"> Yes
-          <input type="radio" name="lucky" value="false" [(ngModel)]="user.lucky"> No
+          <input type="radio" name="lucky" value="true" [(ngModel)]="user.lucky" #lucky="ngModel" required> Yes
+          <input type="radio" name="lucky" value="false" [(ngModel)]="user.lucky" required> No
+        </div>
+        <div *ngIf="lucky.errors" class="col-sm-2 error">
+            Feeling is required.
         </div>
       </div>
       <div class="form-group">
